applied spotless, changed jpa joinColumn annotations and removed unused files